// Copyright 2019 The MediaPipe Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//
// Proto for testing the Packet.

syntax = "proto2";

package mediapipe;

message PacketTestProto {
  // Tests that the tags used to encode the timestamp do not interfere with
  // proto tags.
  repeated int32 x = 1777;
  // The tag below = 1777 | (1 << 28).
  repeated int32 y = 268437233;
}

// A proto like InputCollection::Inputs which has embedded strings
// within it.
message SimpleProto {
  repeated bytes value = 1;
}

// A proto that acts as the proxy of SerializationProxyTestClass for
// serialization.
message SerializationProxyProto {
  optional bool bool_value = 1;
  repeated float float_value = 2;
  repeated string string_value = 3;
}

// This proto should be used only as an input to a calculator, to verify that
// that case is covered.
message InputOnlyProto {
  optional int32 x = 1;
}
